--- a/gui/package.json
+++ b/gui/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-	"express": "^4.12.4",
-	"jade": "^1.10.0",
-	"mongodb": "^2.0.33"
+    "express": "^4.12.4",
+    "jade": "^1.10.0",
+    "moment": "^2.10.3",
+    "mongodb": "^2.0.33"
   },
   "devDependencies": {},
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vykook",
   "license": "BSD"
